2011-07-03  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (debug-var-info): New function: calls
	SB-DI::DEBUG-VAR-INFO when available.
	(frame-locals, frame-var-value): Treat more-context and more-count
	vars specially.

2011-06-21  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank.lisp (*indentation-cache-lock*): Deleted.
	(perform-indentation-update): Spawn a new thread to handle the
	indentation update when using threads. Move cache-clearing to
	UPDATE-INDENTATION/DELTA-FOR-EMACS. Replace the old cache by
	the one returned from U-I/D-F-E.
	(update-indentation/delta-for-emacs): When clearing the cache,
	allocate a new table. When threads are being used, copy the
	cache before mutation, to ensure that caches possibly seen by other
	threads are write-only by then.

2011-06-18  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank.lisp (*indentation-cache-lock*): New variable:
	hash-table updates aren't necessarily thread-safe.
	(perform-indentation-update, update-indentation/delta-for-emacs):
	Grab the lock when necessary -- in delta-for-emacs we hold on to
	it a bit longer than necessary, but the code is easier to read
	this way.

2011-06-16  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank.lisp (macro-indentation): Restore the old simple version.

	* swank-sbcl.lisp (compiling-from-buffer-p): PROBE-FILE to
	handle cases there the tmp-directory is a symlink.
	(compiling-from-file-p): Ditto.

2011-06-14  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-backend.lisp (call-with-io-timeout): New DEFINTERFACE.
	* swank-sbcl.lisp (call-with-io-timeout): DEFIMPLEMENTATION for it.
	* swank.lisp (auto-flush-loop): Call FINISH-OUTPUT using
	CALL-WITH-IO-TIMEOUT to prevent deadlocks.

	* swank.lisp (macro-indentation): Fix handling of lambda-list
	keywords other than &rest and &body.

	* slime.el (slime-update-system-indentation): Remove stale specs
	from common-lisp-system-indentation when new one arrives.
